# slint-sample

./: Cargo.toml  README.md  asd.json
src/: main.rs
src/webapi/: locale.rs  mod.rs  wether.rs
ui/: appwindow.slint
