[package]
name = "my-project"
version = "0.1.0"
authors = ["Hajimen06 <sasaki0hajime@yahoo.co.jp>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
ipinfo = "2.1.0"
reqwest = "0.11.18"
serde = "1.0.183"
serde_json = "1.0.104"
slint = "1.0"
tokio = { version = "1.29.1", features = ["full"] }
url = "2.4.0"

[build-dependencies]
slint-build = "1.0"
